--- a/Aayojakah/Views/Home/Contact.cshtml
+++ b/Aayojakah/Views/Home/Contact.cshtml
@@ -15,7 +15,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/ProjectLogo (1).png" rel="icon">
+    <link href="~/Homepage images/phone.png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -34,12 +34,7 @@
     <!-- Template Main CSS File -->
     <link href="~/assets/css/main.css" rel="stylesheet">
 
-    <!-- =======================================================
-    * Template Name: Nova - v1.0.0
-    * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
+ 
 </head>
 
 <body class="page-contact">
@@ -60,11 +55,11 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
-                    <li><a asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-controller="Home" asp-action="About">About Us</a></li>
                     <li><a asp-controller="Home" asp-action="Services">Services</a></li>
                     <li><a asp-controller="Home" asp-action="Portfolio">Portfolio</a></li>
                     <li><a asp-controller="Home" asp-action="Team">Team</a></li>
-                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Home" asp-action="Contact">Contact Us</a></li>
                     <li><a asp-controller="Login" asp-action="Login">Login</a></li>
                     <li><a asp-controller="Registration" asp-action="Registration">Sign up</a></li>
                 </ul>
@@ -99,7 +94,11 @@
                             <i class="bi bi-geo-alt flex-shrink-0"></i>
                             <div>
                                 <h4>Location:</h4>
-                                <p>A108 Adam Street, New York, NY 535022</p>
+                                <p>
+                                    Plot No 26, Rajiv Gandhi Infotech Park, <br>
+                                    Hinjawadi, Pune - 411057.<br>
+                                    India
+                                </p>
                             </div>
                         </div><!-- End Info Item -->
 
@@ -107,7 +106,7 @@
                             <i class="bi bi-envelope flex-shrink-0"></i>
                             <div>
                                 <h4>Email:</h4>
-                                <p>info@example.com</p>
+                                <p>inquiry@cognizant.com</p>
                             </div>
                         </div><!-- End Info Item -->
 
@@ -123,7 +122,7 @@
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
 
-                        <form action="~/forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form action="~/forms/from-to-email.php" method="post" role="form" name="myemailform" class="php-email-form">
                             <div class="row">
                                 <div class="col-md-6 form-group">
                                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -141,9 +140,13 @@
                             <div class="my-3">
                                 <div class="loading">Loading</div>
                                 <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
+                                <strong>
+                                    <?php if(!empty($msg1)){
+                                    echo $msg1;
+                                    }?>
+                                </strong>
                             </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button name="contact_btn" type="submit">Send Message</button></div>
                         </form>
 
                     </div><!-- End Contact Form -->
@@ -162,7 +165,7 @@
                 <div class="row gy-4">
                     <div class="col-lg-5 col-md-12 footer-info">
                         <a href="index.html" class="logo d-flex align-items-center">
-                            <span>Aayojaka: ~ The Organizers</span>
+                            <span>Aayojakah</span>
                         </a>
                         <p>
                             <br />
@@ -181,26 +184,24 @@
                     <div class="col-lg-2 col-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Portfolio</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Team</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Contact us</a></li>
-
-
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Index">Home</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="About">About us</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Services">Services</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Portfolio</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Team">Team</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Contact">Contact us</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
-                            <li><i class="bi bi-dash"></i> <a href="#">Wedding Ceremony </a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Birthday Celebration </a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Family Function</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Farewell Party</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">College Fest</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Corporate Events</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Wedding Ceremony </a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Birthday Celebration </a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Family Function</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Farewell Party</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">College Fest</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Corporate Events</a></li>
                         </ul>
                     </div>
 
@@ -211,7 +212,7 @@
                             Hinjawadi, Pune - 411057.<br>
                             India <br><br>
                             <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> www.cognizant.com<br>
+                            <strong>Email:</strong> inquiry@cognizant.com<br>
                         </p>
 
                     </div>
