--- a/Aayojakah/Views/Registration/Registration.cshtml
+++ b/Aayojakah/Views/Registration/Registration.cshtml
@@ -28,7 +28,7 @@
 
 
     <!-- Favicons -->
-    <link href="~/ProjectLogo (1).png" rel="icon">
+    <link href="~/Homepage images/phone.png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -47,12 +47,6 @@
     <!-- Template Main CSS File -->
     <link href="~/assets/css/main.css" rel="stylesheet">
 
-    <!-- =======================================================
-    * Template Name: Nova - v1.0.0
-    * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
 </head>
 
 <body class="page-contact">
@@ -72,11 +66,11 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
-                    <li><a asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-controller="Home" asp-action="About">About Us</a></li>
                     <li><a asp-controller="Home" asp-action="Services">Services</a></li>
                     <li><a asp-controller="Home" asp-action="Portfolio">Portfolio</a></li>
                     <li><a asp-controller="Home" asp-action="Team">Team</a></li>
-                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Home" asp-action="Contact">Contact Us</a></li>
                     <li><a asp-controller="Login" asp-action="Login">Login</a></li>
                     <li><a asp-controller="Registration" asp-action="Registration">Sign up</a></li>
                 </ul>
@@ -102,13 +96,13 @@
 
         <div class="d-lg-flex half">
 
-            <div class="contents order-2 order-md-1">
+            <div class="contents order-2 order-md-1" style="width:100%" >
 
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
                         <div class="col-md-7 py-5">
-                            <h3>Register</h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>
+                            <h3 style="font-weight:700; text-align:center">Register</h3>
+                            <br />
 
                             @if (TempData["MessageRegistration"] != null)
                             {
@@ -246,13 +240,14 @@
                                     </div>
                                 </div>
 
-                                <input id="" type="submit" value="Register" class="btn px-5 btn-primary">
+                                <input id="" type="submit" value="Sign up" class="btn px-5 btn-primary">
 
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
+            @*<img src="~/Homepage images/phone.png" style="height:fit-content">*@
 
 
         </div>
@@ -266,7 +261,7 @@
                 <div class="row gy-4">
                     <div class="col-lg-5 col-md-12 footer-info">
                         <a href="index.html" class="logo d-flex align-items-center">
-                            <span>Aayojaka: ~ The Organizers</span>
+                            <span>Aayojakah</span>
                         </a>
                         <p>
                             <br />
@@ -285,26 +280,24 @@
                     <div class="col-lg-2 col-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Portfolio</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Team</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Contact us</a></li>
-
-
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Index">Home</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="About">About us</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Services">Services</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Portfolio</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Team">Team</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Contact">Contact us</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
-                            <li><i class="bi bi-dash"></i> <a href="#">Wedding Ceremony </a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Birthday Celebration </a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Family Function</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Farewell Party</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">College Fest</a></li>
-                            <li><i class="bi bi-dash"></i> <a href="#">Corporate Events</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Wedding Ceremony </a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Birthday Celebration </a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Family Function</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Farewell Party</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">College Fest</a></li>
+                            <li><i class="bi bi-dash"></i> <a asp-controller="Home" asp-action="Portfolio">Corporate Events</a></li>
                         </ul>
                     </div>
 
