--- a/Aayojakah/Views/Shared/_AdminLayout.cshtml
+++ b/Aayojakah/Views/Shared/_AdminLayout.cshtml
@@ -30,7 +30,7 @@
             text-align: left;
         }
     </style>
-    <link href="~/ProjectLogo (1).png" rel=" shortcut icon" />
+    <link href="~/Homepage images/phone.png" rel=" shortcut icon" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Dashboard - @Context.Session.GetString("Username") </title>
