--- a/Aayojakah/Views/Shared/_LayoutCustomer.cshtml
+++ b/Aayojakah/Views/Shared/_LayoutCustomer.cshtml
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="shortcut icon" href="~/ProjectLogo (1).png">
+    <link rel="shortcut icon" href="~/Homepage images/phone.png">
     <style>
         .container {
             min-height:calc(100vh-200px-40px);
